--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.3.4",
+    "date-fns": "^2.29.3",
     "vue": "^3.2.47"
   },
   "devDependencies": {
